@@ -29,6 +29,9 @@ and an example on how to create your own notification script.
 
 See \fBEVENTS\fR section for detailed description of the events.
 .TP
+\fB\-S\fR, \fB\-\-syslog\fR
+Write log messages to local syslog.
+.TP
 \fB\-l\fR, \fB\-\-syslog\-host\fR <addr>
 Set syslog host. tsdecrypt sends messages to this host over tcp in
 syslog compatible format. syslog-ng was tested as receiving syslog server.
